src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.fullpage {
  height: 100vh;
}

/* 1st main part, landing page header with start */
#header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 88%;
  font-size: calc(10px + 2vmin);
}

/* text in header feeling spontaneous */
/* maybe animate to shorten to sponty */
#headertext {
  
}




/* go button in header */
/* TODO: dont select text and make cursour a clicky one */
#headergo {
  font-size: calc(1rem + 10px);
  padding: 0 2rem;
  margin: 1rem;
  position: relative;
}
/* yeeting evan you vue */
#headergo:after {
  content: '';
  position: absolute;
  z-index: -1;
  top: 65%;
  left: -0.1em;
  right: -0.1em;
  bottom: 0;
  transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
  background-color: rgba(79, 192, 141, 0.5);
}
#headergo:hover:after {
  top: 0%;
}




/* 2nd main part, rolling and body */
#bigspon {

}


/* both spec and action rolling div */
#looptext {
  display: inline-block;
  background-color: orange;
}

/* action rolling */
#actiontext {
  display: inline;
}

/* specific rolling */
#spectext {
  display: inline;
}

